fix horizontal scrolling issue - 2.2.2

--- a/minbay.css
+++ b/minbay.css
@@ -104,7 +104,7 @@ input, textarea {
  border-radius: 2px;
  font-family: sans-serif;
  font-size: .9em;
- padding: .5em;
+ padding: .2em;
 }
 
 
@@ -153,10 +153,10 @@ button {
   font-weight: bold;
   cursor: pointer;
   margin: .1em;
-  padding-top: .4em;
-  padding-left: .6em;
-  padding-right: .6em;
-  padding-bottom: .4em; 
+  padding-top: .2em;
+  padding-left: .3em;
+  padding-right: .3em;
+  padding-bottom: .2em; 
 }
 
 button:hover, button:focus {
